--- a/MP.ipynb
+++ b/MP.ipynb
@@ -1390,6 +1390,16 @@
     "prediction = model.predict(X_test)\n",
     "prediction"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "clf = LinearRegression()"
+   ]
   }
  ],
  "metadata": {
